--- a/impression.html
+++ b/impression.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>PageCasier</title>
+    <title>PageCarteDeVisites</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
@@ -53,31 +53,49 @@
     <main style="padding-bottom:6vw;">
     <div
       class="col-12 container">
-      <h1 class=" display-3" style="color:#01A659; font-weight: 500; padding-top:2em;">Casiers pour mobile</h1>
+      <h1 class=" display-3" style="color:#01A659; font-weight: 500; padding-top:2em;">Impression</h1>
   </div>
   <div class="col-12 container">
     <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
   </div>
   <div
     class="col-12 container">
-    <h2 class="" style="color:#01A659;">Casiers pour mobile</h1>
+    <h2 class="" style="color:#01A659;">Choix du type de format</h1>
   </div>
 <div class="container" >
     <div class="row g-2">
         <div class="col-3" >
             <div class="col-2">
-                <button type="button" class="p-3 btn btn-link"><img src="img/Casier/Casier01.jpg" style="width: 20vw"></button>
+                <button type="button" class="p-3 btn btn-link"><img src="img/Impression/Imprimer02.jpg" style="width: 20vw"></button>
+            </div>
+        </div>
+        <div class="col-3" >
+            <div class="col-2">
+                <button type="button" class="p-3 btn btn-link"><img src="img/Impression/Imprimer03.jpg" style="width: 20vw"></button>
             </div>
         </div>
     </div>
+    <div
+    class="col-12 container">
+    <h2 class="" style="color:#01A659;">Choix du grammage</h1>
+  </div>
+  <div>
+    <input type="number" id="tentacles" name="tentacles"
+           min="80" max="400" step="5">
+    
+          </div>
+          <div class="col-5">
+          <label class="form-label" for="customFile">Insérez votre impression</label>
+          <input type="file" class="form-control" id="customFile" />
+          </div>
 </div>
   <div class="container">
   <div class="d-flex justify-content-end">
       <div>
 <input type="number" id="tentacles" name="tentacles"
-       min="1" max="5">
-
+       min="10" max="50" step="10">
       </div>
+
     <a class="btn text-white col-md-2 " href="#" style="background-color:#01A659; font-weight: bold;" >
         Ajouter au panier
         </a>
