--- a/Service.html
+++ b/Service.html
@@ -62,6 +62,13 @@
     <div class="container" >
       <div class="row g-2">
         <div class="col-3" >
+          <div class="p-3"style="background-color:#EDEEEF; "><img src="img/Impression/Imprimer01.jpg" style="width: 20vw">Impression<br>
+            <a class="btn text-white col-md-6" href="impression.html" style="background-color:#01A659; font-weight: bold;" >
+              Commander
+              </a>
+            </div>
+        </div>
+        <div class="col-3" >
           <div class="p-3"style="background-color:#EDEEEF; "><img src="img/Carte.jpg" style="width: 20vw">Cartes de visites<br>
             <a class="btn text-white col-md-6" href="CartesDeVisites.html" style="background-color:#01A659; font-weight: bold;" >
               Commander
@@ -93,7 +100,7 @@
   </main>
   <footer>
     <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : <br>
-      <strong>espace.pao@mediamatique.ch</strong></p>
+      <strong><a href="mailto:espace.pao@mediamatique.ch">espace.pao@mediamatique.ch</a></strong></p>
   </footer>
   </body>
 
